fix nav scroller, logo squishing on small viewports

--- a/pipeline/static/css/pipeline.scss
+++ b/pipeline/static/css/pipeline.scss
@@ -102,6 +102,11 @@ header a.search {
   height: 2.35rem;
   overflow-y: hidden;
   font-family: var(--font-family-sans-serif);
+  @include media-breakpoint-down(xs) {
+    .container {
+      padding: 0;
+    }
+  }
 }
 
 .nav-scroller .nav {
@@ -125,41 +130,46 @@ header a.search {
 
 .nav-scroller .nav-link.home-link {
   padding: 0;
-  position: absolute;
-  top: 6px;
+  position: relative;
+  top: 3px;
   transition: all 0.1s ease-in-out;
   opacity: 0;
   width: 0;
+
   img {
     height: 25px;
-    max-width: 100%;
-    max-height: 100%;
+    width: 0;
     border-radius: 4px;
+    transition: width 0.1s ease-in-out;
   }
 }
 
 .nav-scroller.home-link--show .home-link {
   opacity: 1;
   width: auto;
+  transition: opacity, padding-right 0.1s ease-in-out;
+  padding-right: 0.6rem;
+  img {
+    width: 25px;
+    transition: width 0.1s ease-in-out;
+  }
+  @include media-breakpoint-down(xs) {
+    padding-left: 0.6rem;
+  }
 }
 
 .nav-scroller .nav-link-0 {
   padding-left: 0;
-  transition: padding-left, margin-left 0.1s ease-in-out;
-}
-
-.nav-scroller.home-link--show .nav-link-0 {
-  padding-left: 0.6rem;
-  margin-left: 30px;
-}
-@include media-breakpoint-up(sm) {
-  .nav-scroller.home-link--show .nav-link-0 {
-    margin-left: 50px;
+  @include media-breakpoint-down(xs) {
+    padding-left: 0.6rem;
   }
 }
 
 .nav-scroller .nav-link:last-child {
   padding-right: 0;
+  @include media-breakpoint-down(xs) {
+    padding-right: 0.6rem;
+  }
 }
 
 .nav-scroller .nav-link.active {
@@ -348,7 +358,9 @@ ul.pagination {
 
 @include media-breakpoint-down(sm) {
   .template-homepage .header-logo img {
-    height: 70px;
+    max-height: 70px;
+    width: auto;
+    height: auto;
   }
 }
 
